<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveFit</string>
    <string name="action_settings">Settings</string>
    <string name="fitness">Fitness</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="all_workouts">All Workouts</string>
    <string name="no_workouts_yet">You haven\'\ t added any workouts yet!</string>
    <string name="plus">+</string>
    <string name="workout_schedule">Workout Schedule</string>
    <string name="add_workout">Add Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_description">Workout Description</string>
    <string name="create_workout">Create Workout</string>
    <string name="exercises">Exercises</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="exercise_weight">Weight</string>
    <string name="exercise_reps">Reps</string>
    <string name="exercise_seconds">Time (Seconds)</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="not_set">Not Set</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="no_workouts_for_this_day_yet">You haven\'t scheduled any workouts for this day yet!</string>
    <string name="start_workout">Start Workout</string>
    <string name="no_exercises">You don\'t have any exercises for this workout!</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="start_timer">Start Timer</string>

</resources>
