<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_grey_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_blue"
        android:textColor="@color/white"
        android:text="@string/add_exercise"
        android:textSize="30sp"
        android:padding="5dp"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/dialog_exercise_name"
        android:hint="@string/exercise_name"
        android:layout_marginTop="15dp"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/dialog_exercise_description"
        android:hint="@string/exercise_description"
        android:layout_marginTop="5dp"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/dialog_exercise_weight"
        android:hint="@string/exercise_weight"
        android:layout_marginTop="5dp"
        android:inputType="number"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/dialog_exercise_reps"
        android:hint="@string/exercise_reps"
        android:layout_marginTop="5dp"
        android:inputType="number"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/dialog_exercise_seconds"
        android:hint="@string/exercise_seconds"
        android:layout_marginTop="5dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/create_exercise_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_exercise"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/yellow_button_selector"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>