<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_grey_background">

    <android.support.v7.widget.Toolbar
        style="@style/ToolbarStyle"
        android:id="@+id/add_workout_activity_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent" />

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/activity_add_workout_workout_name"
        android:hint="@string/workout_name"
        android:layout_marginTop="15dp"/>

    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/activity_add_workout_workout_description"
        android:hint="@string/workout_description"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/create_workout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_workout"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/yellow_button_selector"
        android:layout_marginTop="20dp"/>

</LinearLayout>